[package]
name = "wraper-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
toml = "0.8.19"
rocket = { version = "0.5.1", features = ["json"] }
log = "0.4"
# rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }

[features]
default = ["debug"]
debug = []
