[package]
name = "wraper-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# reqwest = { version = "0.12.9", features = ["blocking"] }
reqwest = { version = "0.12.9" }
toml = "0.8.19"
rocket = { version = "0.5.1", features = ["json"] }
log = "0.4"
regex = "1.11.1"
# rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }

[features]
default = ["debug"]
debug = []
