[package]
name = "wraper-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "^0.11.0", default-features = false, features = ["rustls-tls"] }
toml = "0.8.19"
rocket = { version = "0.5.1", features = ["json"] }
log = "0.4"
regex = "1.11.1"

[features]
default = ["debug"]
debug = []
